[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.82"
api-core = { path = "./crates/api-core", default-features = false }
api-database = { path = "./crates/api-database" }
async-graphql = { version = "7.0.3", default-features = false }
async-graphql-axum = { version = "7.0.3" }
async-stream = "0.3.5"
async-trait = "0.1.80"
criterion = "0.5.1"
dotenvy = "0.15.7"
fake = "2.9.2"
futures-channel = "0.3.30"
futures-timer = "3.0.3"
futures-util = "0.3.30"
meilisearch-sdk = { version = "0.25.0", default-features = false }
opentelemetry = "0.22.0"
opentelemetry-http = "0.11.1"
serde = "1.0.198"
serde_json = "1.0.116"
surrealdb = "1.4.0"
thiserror = "1.0.58"
time = "0.3.36"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
trait-variant = "0.1.2"
uuid = "1.8.0"

# https://github.com/meilisearch/meilisearch-rust/pull/524
[patch.crates-io]
meilisearch-sdk = { git = "https://github.com/meilisearch/meilisearch-rust", rev = "cb32534" }

[profile.release]
lto = true
strip = true
codegen-units = 1
