[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true, optional = true }
async-trait.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
trait-variant.workspace = true
uuid = { workspace = true, features = ["serde"] }

[features]
default = []
async-graphql = ["dep:async-graphql", "async-graphql/uuid", "async-graphql/time", "async-graphql/decimal"]
serde = ["serde/derive", "time/serde", "rust_decimal/serde"]

[dev-dependencies]
bincode = "1.3.3"
criterion.workspace = true
fake.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bench]]
name = "listing-serde"
harness = false
path = "../../benches/listing-serde.rs"
