[package]
name = "api-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { workspace = true, features = ["serde"] }
async-trait.workspace = true
bb8 = "0.8.3"
bb8-redis = "0.15.0"
bincode = "1.3.3"
futures-util.workspace = true
graphql_client = "0.13.0"
meilisearch-sdk = { workspace = true, features = ["reqwest-rustls"] }
opentelemetry.workspace = true
opentelemetry-http.workspace = true
redis = { version = "0.25.2", default-features = false, features = ["cluster-async", "tokio-comp"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0.114"
surrealdb.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
dotenvy.workspace = true
fake.workspace = true
tokio = { workspace = true, features = ["macros"] }
