[package]
name = "api-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { workspace = true, features = ["serde"] }
async-trait.workspace = true
bb8 = "0.8.3"
bb8-redis = "0.15.0"
bincode = "1.3.3"
futures-util.workspace = true
graphql_client = "0.14.0"
meilisearch-sdk = { workspace = true }
opentelemetry.workspace = true
opentelemetry-http.workspace = true
redis = { version = "0.25.3", default-features = false, features = ["cluster-async", "tokio-comp"] }
reqwest = { version = "0.12.4", default-features = false, features = ["http2", "json", "rustls-tls"] }
rust_decimal = { workspace = true, features = ["serde"] }
rust-s3 = { version = "0.33.0", default-features = false, features = ["fail-on-err", "tags", "tokio-rustls-tls"] }
serde.workspace = true
serde_json = "1.0.116"
surrealdb.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
dotenvy.workspace = true
fake.workspace = true
tokio = { workspace = true, features = ["macros"] }
